# FileFlow

./: CMakeLists.txt  LICENSE  MakeFile  README.md
docs/: queue.md
includes/: defs.h
src/: commands.c  commands.h  hostNameUtils.c  hostNameUtils.h  main.c  tokenizer.c  tokenizer.h  utils.c  utils.h
